comment, order, cart

--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -27,6 +27,22 @@ body a {
 body img {
     max-width: 100%;
 }
+.quantity {
+    position: absolute;
+    display: inline-block;
+    top: -4px;
+    right: -7px;
+    height: 15px;
+    width: 15px;
+    line-height: 15px;
+    text-align: center;
+    background: blue;
+    color: #fff;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    border-radius: 100%;
+    font-size: 12px;
+}
 
 a:hover {
     text-decoration: none;
