--- a/templates/security/register.html.twig
+++ b/templates/security/register.html.twig
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
+    <title>Register</title>
     {% include('admin/SubTwig/header.html.twig') %}
-
 </head>
 
-<body>
+<body class="">
 <div class="page-wrapper">
     <div class="page-content--bge5">
         <div class="container">
@@ -18,6 +18,9 @@
                         </a>
                     </div>
                     <div class="login-form">
+                        {% for message in app.flashes('error') %}
+                            <div class="alert alert-danger">{{ message }}</div>
+                        {% endfor %}
                         <form action="" method="post">
                             <input type="hidden" name="_csrf_token"
                                    value="{{ csrf_token('authenticate') }}">
