--- a/templates/admin/food/edit.html.twig
+++ b/templates/admin/food/edit.html.twig
@@ -16,8 +16,8 @@
 
             </div>
             <div class="card-footer">
-                <button type="submit" class="btn-sm btn btn-primary float-right">
-                    <i class="fa fa-edit"></i> Edit
+                <button class="btn btn-sm btn-primary float-right">
+                    <i class="fa fa-dot-circle-o"></i> Edit
                 </button>
                 </form>
                 {% include('admin/food/_delete_form.html.twig') with {'floatClass' : 'float-left'} %}
