--- a/templates/front/SubTwig/front.base.html.twig
+++ b/templates/front/SubTwig/front.base.html.twig
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="{% block description %} {% endblock %}">
+    <meta name="keywords" content="{% block keywords %}{% endblock %}">
     <title>{% block title %}{% endblock %}</title>
     {% include 'front/SubTwig/front.header.html.twig' %}
     {% block stylesheets %}{% endblock %}
