--- a/templates/front/SubTwig/front.footer.html.twig
+++ b/templates/front/SubTwig/front.footer.html.twig
@@ -3,23 +3,23 @@
 	<div class="container py-sm-3">
 		<div class="row footer-grids">
 			<div class="col-lg-3 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
-				<h4 class="mb-4"><span class="fa fa-cutlery"></span> Crispy</h4>
+				<h4 class="mb-4"><span class="fa fa-cutlery"></span> {{ setting.firmname }}</h4>
 				<p class="mb-3">Onec Consequat sapien ut cursus rhoncus. Nullam dui mi, vulputate ac metus semper quis luctus sed.</p>
 				<h5>Trusted by <span>500+ People</span> </h5>
 			</div>
 			<div class="col-lg-3 col-sm-6 mb-md-0 mb-sm-5 mb-4">
 				<h4 class="mb-4">Address Info</h4>
-				<p><span class="fa mr-2 fa-map-marker"></span>64d canal street TT 3356 <span>Newyork, NY.</span></p>
-				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> +1(12) 123 456 789 </p>
-				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:info@example.com">info@example.com</a></p>
+				<p><span class="fa mr-2 fa-map-marker"></span>{{ setting.address }}</span></p>
+				<p class="phone py-2"><span class="fa mr-2 fa-phone"></span> {{ setting.tel }} </p>
+				<p><span class="fa mr-2 fa-envelope"></span><a href="mailto:{{ setting.email }}">{{  setting.email }}</a></p>
 			</div>
 			<div class="col-lg-2 col-sm-6 mb-lg-0 mb-sm-5 mb-4">
 				<h4 class="mb-4">Quick Links</h4>
 				<ul>
-					<li><a href="#">Order Online</a></li>
-					<li class="my-2"><a href="#">Healthy Crispy</a></li>
-					<li><a href="#">Support Helpline</a></li>
-					<li class="mt-2"><a href="#">Privacy Ploicy</a></li>
+					<li><a href="{{ path('front.meal-category') }}">Order Online</a></li>
+					<li class="my-2"><a href="{{ path('front.aboutUs') }}">About Us</a></li>
+					<li><a href="{{ path('front.contactus') }}">Contact Us</a></li>
+					<li class="mt-2"><a href="{{ path('front.prefrences') }}">Refrences</a></li>
 				</ul>
 			</div>
 			<div class="col-lg-4 col-sm-6">
@@ -30,20 +30,14 @@
 					<button type="submit" class="btn">Subscribe</button>
 				</form>
 				<div class="icon-social mt-3">
-					<a href="#" class="button-footr">
+					<a href="{{ setting.facebook }}" class="button-footr">
 						<span class="fa mx-2 fa-facebook"></span>
 					</a>
-					<a href="#" class="button-footr">
+					<a href="{{ setting.twitter }}" class="button-footr">
 						<span class="fa mx-2 fa-twitter"></span>
 					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-dribbble"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-pinterest"></span>
-					</a>
-					<a href="#" class="button-footr">
-						<span class="fa mx-2 fa-google-plus"></span>
+					<a href="{{ setting.instagram }}" class="button-footr">
+						<span class="fa mx-2 fa-instagram"></span>
 					</a>
 
 				</div>
