--- a/templates/front/SubTwig/profile-nav.html.twig
+++ b/templates/front/SubTwig/profile-nav.html.twig
@@ -16,8 +16,7 @@
             <div class="row d-none">
                 <div class="col col-lg-9 col-md-9 col-sm-12 align-middle py-1 ">
                     <ul>
-                        <a href=""><li class=""><h6 class="py-1 px-2">General</h6></li></a>
-                        <a href=""><li class=""><h6 class="py-1 px-2">Gallery</h6></li></a>
+                        <a href="{{ path('front.user-general') }}"><li class=""><h6 class="py-1 px-2">Settings</h6></li></a>
                     </ul>
                 </div>
             </div>
