--- a/templates/front/front.aboutUs.html.twig
+++ b/templates/front/front.aboutUs.html.twig
@@ -1,12 +1,9 @@
 {% extends 'front/SubTwig/front.base.html.twig' %}
 
 {% block title %}{{title}}{% endblock %}
+{% block keywords %}{{ keywords ? keywords : setting.keywords }}{% endblock %}
+{% block description %}{{ description ? description : setting.description }}{% endblock %}
 {% block body %}
-    {% include 'front/SubTwig/front.navbar.html.twig' %}
-    {% include 'front/SubTwig/aboutUs/front.aboutUs-banner.html.twig' %}
-    {# {% include 'front/SubTwig/front.home-about.html.twig' %}
-    {% include 'front/SubTwig/front.home-services.html.twig' %}
-    {% include 'front/SubTwig/front.home-testi.html.twig' %}
-    {% include 'front/SubTwig/front.home-blog.html.twig' %} #}
+            {{ setting.aboutus | raw }}
     {% include 'front/SubTwig/front.footer.html.twig' %}
 {% endblock %}
