--- a/public/assets/front/css/style.css
+++ b/public/assets/front/css/style.css
@@ -2509,6 +2509,7 @@ a.move-top span{
     height: 40px;
     width: 40px;
     border-radius: 50%;
+    object-fit: cover;
     /*border: 5px solid white;*/
 }
 
