--- a/templates/admin/SubTwig/navbar.html.twig
+++ b/templates/admin/SubTwig/navbar.html.twig
@@ -10,155 +10,51 @@
                     </button>
                 </form>
                 <div class="header-button">
-                    <div class="noti-wrap">
-                        <div class="noti__item js-item-menu">
-                            <i class="zmdi zmdi-comment-more"></i>
-                            <span class="quantity">1</span>
-                            <div class="mess-dropdown js-dropdown">
-                                <div class="mess__title">
-                                    <p>You have 2 news message</p>
-                                </div>
-                                <div class="mess__item">
-                                    <div class="image img-cir img-40">
-                                        <img src= "{{ asset('assets/admin') }}/images/icon/avatar-06.jpg" alt="Michelle Moreno" />
-                                    </div>
-                                    <div class="content">
-                                        <h6>Michelle Moreno</h6>
-                                        <p>Have sent a photo</p>
-                                        <span class="time">3 min ago</span>
-                                    </div>
-                                </div>
-                                <div class="mess__item">
-                                    <div class="image img-cir img-40">
-                                        <img src= "{{ asset('assets/admin') }}/images/icon/avatar-04.jpg" alt="Diane Myers" />
-                                    </div>
-                                    <div class="content">
-                                        <h6>Diane Myers</h6>
-                                        <p>You are now connected on message</p>
-                                        <span class="time">Yesterday</span>
-                                    </div>
-                                </div>
-                                <div class="mess__footer">
-                                    <a href= "{{ asset('assets/admin') }}/#">View all messages</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="noti__item js-item-menu">
-                            <i class="zmdi zmdi-email"></i>
-                            <span class="quantity">1</span>
-                            <div class="email-dropdown js-dropdown">
-                                <div class="email__title">
-                                    <p>You have 3 New Emails</p>
-                                </div>
-                                <div class="email__item">
-                                    <div class="image img-cir img-40">
-                                        <img src= "{{ asset('assets/admin') }}/images/icon/avatar-06.jpg" alt="Cynthia Harvey" />
-                                    </div>
-                                    <div class="content">
-                                        <p>Meeting about new dashboard...</p>
-                                        <span>Cynthia Harvey, 3 min ago</span>
-                                    </div>
-                                </div>
-                                <div class="email__item">
-                                    <div class="image img-cir img-40">
-                                        <img src= "{{ asset('assets/admin') }}/images/icon/avatar-05.jpg" alt="Cynthia Harvey" />
-                                    </div>
-                                    <div class="content">
-                                        <p>Meeting about new dashboard...</p>
-                                        <span>Cynthia Harvey, Yesterday</span>
-                                    </div>
-                                </div>
-                                <div class="email__item">
-                                    <div class="image img-cir img-40">
-                                        <img src= "{{ asset('assets/admin') }}/images/icon/avatar-04.jpg" alt="Cynthia Harvey" />
-                                    </div>
-                                    <div class="content">
-                                        <p>Meeting about new dashboard...</p>
-                                        <span>Cynthia Harvey, April 12,,2018</span>
-                                    </div>
-                                </div>
-                                <div class="email__footer">
-                                    <a href= "{{ asset('assets/admin') }}/#">See all emails</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="noti__item js-item-menu">
-                            <i class="zmdi zmdi-notifications"></i>
-                            <span class="quantity">3</span>
-                            <div class="notifi-dropdown js-dropdown">
-                                <div class="notifi__title">
-                                    <p>You have 3 Notifications</p>
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="bg-c1 img-cir img-40">
-                                        <i class="zmdi zmdi-email-open"></i>
-                                    </div>
-                                    <div class="content">
-                                        <p>You got a email notification</p>
-                                        <span class="date">April 12, 2018 06:50</span>
-                                    </div>
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="bg-c2 img-cir img-40">
-                                        <i class="zmdi zmdi-account-box"></i>
-                                    </div>
-                                    <div class="content">
-                                        <p>Your account has been blocked</p>
-                                        <span class="date">April 12, 2018 06:50</span>
-                                    </div>
-                                </div>
-                                <div class="notifi__item">
-                                    <div class="bg-c3 img-cir img-40">
-                                        <i class="zmdi zmdi-file-text"></i>
-                                    </div>
-                                    <div class="content">
-                                        <p>You got a new file</p>
-                                        <span class="date">April 12, 2018 06:50</span>
-                                    </div>
-                                </div>
-                                <div class="notifi__footer">
-                                    <a href= "{{ asset('assets/admin') }}/#">All notifications</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <div class="account-wrap">
                         <div class="account-item clearfix js-item-menu">
                             <div class="image">
-                                <img src= "{{ asset('assets/admin') }}/images/icon/avatar-01.jpg" alt="John Doe" />
+                                {% if app.user.profileImg %}
+                                    <img style="border-radius: 50%;" src= "{{ asset('Upload/Images/' ~ app.user.profileImg.location ) }}"  />
+                                {% else %}
+                                    <img style="border-radius: 50%" src= "{{ asset('Upload/Images/no-profile-pic-icon-5.jpg/') }}"  />
+                                {% endif %}
                             </div>
                             <div class="content">
-                                <a class="js-acc-btn" href= "{{ asset('assets/admin') }}/#">john doe</a>
+                                <a class="js-acc-btn" href= "{{ asset('assets/admin') }}/#">{{ app.user.username }}</a>
                             </div>
                             <div class="account-dropdown js-dropdown">
                                 <div class="info clearfix">
                                     <div class="image">
                                         <a href= "{{ asset('assets/admin') }}/#">
-                                            <img src= "{{ asset('assets/admin') }}/images/icon/avatar-01.jpg" alt="John Doe" />
+                                            {% if app.user.profileImg %}
+                                                <img src= "{{ asset('Upload/Images/' ~ app.user.profileImg.location ) }}"  />
+                                            {% else %}
+                                                <img style="border-radius: 100%" src= "{{ asset('Upload/Images/no-profile-pic-icon-5.jpg/') }}"  />
+                                            {% endif %}
                                         </a>
                                     </div>
                                     <div class="content">
                                         <h5 class="name">
-                                            <a href= "{{ asset('assets/admin') }}/#">john doe</a>
+                                            <a href= "{{ asset('assets/admin') }}/#">{{ app.user.username ~ " " ~ app.user.surname }}</a>
                                         </h5>
-                                        <span class="email">johndoe@example.com</span>
+                                        <span class="email">{{ app.user.email }}</span>
                                     </div>
                                 </div>
                                 <div class="account-dropdown__body">
-                                    <div class="account-dropdown__item">
-                                        <a href= "{{ asset('assets/admin') }}/#">
-                                            <i class="zmdi zmdi-account"></i>Account</a>
-                                    </div>
+{#                                    <div class="account-dropdown__item">#}
+{#                                        <a href= "{{ asset('assets/admin') }}/#">#}
+{#                                            <i class="zmdi zmdi-account"></i>Account</a>#}
+{#                                    </div>#}
 {#                                    <div class="account-dropdown__item">#}
 {#                                        <a href= "{{ asset('assets/admin') }}/#">#}
 {#                                            <i class="zmdi zmdi-settings"></i>Setting</a>#}
 {#                                    </div>#}
-                                    <div class="account-dropdown__item">
-                                        <a href= "{{ asset('assets/admin') }}/#">
-                                            <i class="zmdi zmdi-money-box"></i>Billing</a>
-                                    </div>
+{#                                    <div class="account-dropdown__item">#}
+{#                                        <a href= "{{ asset('assets/admin') }}/#">#}
+{#                                            <i class="zmdi zmdi-money-box"></i>Billing</a>#}
+{#                                    </div>#}
                                     <div class="account-dropdown__footer">
-                                        <a href= "{{ asset('assets/admin') }}/#">
+                                        <a href= "{{ path('logout') }}/#">
                                             <i class="zmdi zmdi-power"></i>Logout</a>
                                     </div>
                                 </div>
