--- a/templates/admin/SubTwig/sidebar.html.twig
+++ b/templates/admin/SubTwig/sidebar.html.twig
@@ -125,19 +125,23 @@
   <div class="menu-sidebar__content js-scrollbar1">
     <nav class="navbar-sidebar">
       <ul class="list-unstyled navbar__list">
-        <li class="active has-sub">
+        <li class="has-sub">
           <a class="js-arrow" href= "#">
-            <i class="fas fa-motorcycle"></i>Orders <span class="float-right"><i class="fa fa-angle-down"></i></span></a>
+            <i class="fa fa-motorcycle"></i>Orders <span class="float-right"><i class="fa fa-angle-down"></i></span></a>
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
-              <a href= "#">New Orders</a>
+              <a href= "{{ path('order-history') }}">Order History</a>
             </li>
             <li>
-              <a href= "#">In Process</a>
+              <a href= "{{ path('order-new') }}">New Orders</a>
             </li>
             <li>
-              <a href= "#">Order History</a>
+              <a href= "{{ path('order-on-way') }}">On Way</a>
             </li>
+            <li>
+              <a href= "{{ path('order-delivered') }}">Delivered</a>
+            </li>
+
           </ul>
         </li><li class="has-sub">
           <a class="js-arrow" href= "#">
@@ -147,10 +151,10 @@
               <a href= "{{ path('category_index') }}">All</a>
             </li>
             <li>
-              <a href= "#">Main Categories</a>
+              <a href= "{{ path('category_main_index') }}">Main Categories</a>
             </li>
             <li>
-              <a href= "#">Sub Categories</a>
+              <a href= "{{ path('category_sub_index') }}">Sub Categories</a>
             </li>
           </ul>
         </li>
@@ -165,24 +169,38 @@
             <i class="fas fa-users"></i>User <span class="float-right"><i class="fa fa-angle-down"></i></span></a>
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
-              <a href= "#">Normal User</a>
+              <a href= "{{ path('user_index') }}">All Users</a>
             </li>
             <li>
-              <a href= "#">Admin</a>
+              <a href= "{{ path('user_normal_index') }}">Normal Users</a>
+            </li>
+            <li>
+              <a href= "{{ path('user_admin_index') }}">Admins</a>
             </li>
           </ul>
         </li>
 
         {#Messages#}
         <li>
-          <a href= "#">
+          <a href= "{{ path('message_index') }}">
             <i class="fas fa-inbox"></i>Messages</a>
         </li>
 
         {#Commentes#}
-        <li>
-          <a href= "#">
-            <i class="fas fa-comments"></i>Comments</a>
+        </li><li class="has-sub">
+          <a class="js-arrow" href= "#">
+            <i class="fas fa-comments"></i>Comments <span class="float-right"><i class="fa fa-angle-down"></i></span></a>
+          <ul class="list-unstyled navbar__sub-list js-sub-list">
+            <li>
+              <a href= "{{ path('comment_index') }}">All Comments</a>
+            </li>
+            <li>
+              <a href= "{{ path('comment_active') }}">Active Comments</a>
+            </li>
+            <li>
+              <a href= "{{ path('comment_hidden') }}">Hidden Comments</a>
+            </li>
+          </ul>
         </li>
         {#Home Page Setting#}
         </li><li class="has-sub">
@@ -197,7 +215,7 @@
 
         {#Settings#}
         <li>
-          <a href= "#">
+          <a href= "{{ path('settings_index') }}">
             <i class="zmdi zmdi-settings"></i>Setting</a>
         </li>
       </ul>
