--- a/templates/admin/category/index.html.twig
+++ b/templates/admin/category/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/SubTwig/base.html.twig' %}
 
-{% block title %}Category index{% endblock %}
+{% block title %}{{ title }}{% endblock %}
 
 {% block body %}
     <div class="col-md-12">
