--- a/templates/admin/food/_form.html.twig
+++ b/templates/admin/food/_form.html.twig
@@ -5,8 +5,6 @@
 
 
 <form action="" name="food" method="post" enctype="multipart/form-data" class="form-horizontal">
-
-
     {#                food Name#}
     <div class="row form-group">
         <div class="col col-md-3">
@@ -29,7 +27,7 @@
             <select name="food[category]" id="category" class="form-control">
                 {% for category in categories %}
                     {% if category.parentid %}
-                        <option value="{{ category.id }}" {{food.category ? (food.category.id == category.id ? "selected" : "") : "" }}>{{ category.name }}</option>
+                        <option value="{{ category.id }}" {{ food.category ? (food.category.id == category.id ? "selected" : "") : "" }}>{{ category.name }}</option>
                     {% endif %}
                 {% endfor %}
             </select>
@@ -46,20 +44,22 @@
             {#            <input type="text" id="image-id" name="food[image]" class="form-control" value="{{ food.image ? food.image }}">#}
             <select name="food[image]" id="foodImageForm" value="{{ food.image }}" class="form-control">
                 {% for img in images %}
-                    <option value="{{ img.id }}" data-url="{{ img.location }}" {{food.image ? (food.image.id == img.id ? "selected" : "") : "" }}>{{ img }}</option>
+                    <option value="{{ img.id }}"
+                            data-url="{{ img.location }}" {{ food.image ? (food.image.id == img.id ? "selected" : "") : "" }}>{{ img }}</option>
                 {% endfor %}
             </select>
             <br>
             {% if food.image != NULL %}
-                <img src="{{ asset('Upload/Images/') }}/{{ food.image.location }}" alt="" id="foodImage"  style="object-fit: cover; width: 100%; height: 150px">
+                <img src="{{ asset('Upload/Images/') }}/{{ food.image.location }}" alt="" id="foodImage"
+                     style="object-fit: cover; width: 100%; height: 150px">
             {% else %}
-                <img src="{{ asset('Upload/Images/amirali-mirhashemian-pucP6jZSyV4-unsplash-5dd99b59785ab.jpeg') }}" alt="" id="foodImage" style="object-fit: cover; width: 100%; height: 150px">
+                <img src="{{ asset('Upload/Images/amirali-mirhashemian-pucP6jZSyV4-unsplash-5dd99b59785ab.jpeg') }}"
+                     alt="" id="foodImage" style="object-fit: cover; width: 100%; height: 150px">
             {% endif %}
             <script>
                 let foodImgForm = document.getElementById('foodImageForm');
                 let foodImg = document.getElementById('foodImage');
-                foodImgForm.onchange = function(e)
-                {
+                foodImgForm.onchange = function (e) {
                     let imgurl = foodImgForm.options[foodImgForm.selectedIndex].dataset.url;
                     foodImg.src = "{{ asset("Upload/Images/") }}/" + imgurl;
 
@@ -106,6 +106,31 @@
             <small class="help-block form-text">Description of the food</small>
         </div>
     </div>
+    <div class="row form-group">
+        <div class="col col-md-3">
+            <label for="description" class=" form-control-label">Gallery Images</label>
+        </div>
+        <div class="col-12 col-md-9">
+            <select id="food_images" name="food[images][]" class="form-control" multiple="multiple">
+                {% for img in images %}
+                    <option value="{{img.id}}" {{ img in food.images ? 'selected' : '' }}>{{img.title}}</option>
+                {% endfor %}
+            </select>
+        </div>
+    </div>
+
+    <div class="row form-group">
+        <div class="col col-md-3">
+            <label for="description" class=" form-control-label">Status</label>
+        </div>
+        <div class="col-12 col-md-9">
+            <select id="food_images" name="food[status]" class="form-control">
+                <option value="1">Show</option>
+                <option value="0">Hidden</option>
+            </select>
+        </div>
+    </div>
+
 
 
     {#    #}{#                Status#}
