--- a/templates/admin/slider/show.html.twig
+++ b/templates/admin/slider/show.html.twig
@@ -3,9 +3,18 @@
 {% block title %}Slider{% endblock %}
 
 {% block body %}
-    <h1>Slider</h1>
-
-    <table class="table">
+<div class="col-md-12">
+    <div class="card">
+        <div class="card-header">
+            <strong>{{ slider.title }}</strong>
+            <a class="btn-sm btn btn-dark float-right" href="{{ path('slider_index') }}">
+                <i class="fa fa-arrow-left"></i> back to list
+            </a>
+        </div>
+        <div class="card-body">
+            <div class="col-md-12">
+                <div class="table-responsive m-b-40">
+                    <table class="table table-bordered table-data3">
         <tbody>
             <tr>
                 <th>Id</th>
@@ -29,10 +38,16 @@
             </tr>
         </tbody>
     </table>
-
+                </div>
+            </div>
+        </div>
+        <div class="card-footer">
     <a href="{{ path('slider_index') }}">back to list</a>
 
     <a href="{{ path('slider_edit', {'id': slider.id}) }}">edit</a>
 
     {{ include('admin/slider/_delete_form.html.twig') }}
+    </div>
+</div>
+
 {% endblock %}
