--- a/templates/admin/user/_form.html.twig
+++ b/templates/admin/user/_form.html.twig
@@ -1,4 +1,13 @@
+{% form_theme form 'bootstrap_4_layout.html.twig' %}
+
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="btn btn-sm btn-primary"><i class="fa fa-dot-circle-o"></i> {{ button_label | default('Save') }}</button>
 {{ form_end(form) }}
+{#<form action="" method="post">#}
+{#    <input type="text" name="user[username]" value="{{ user.username }}">#}
+{#    <input type="email" name="user[email]" value="{{ user.email }}">#}
+{#    <input type="password" name="user[password]" value="{{ user.password }}">#}
+{#    <input type="text" name="user[roles]" value="[{{ user.roles | join(',') }}]">#}
+{#    <input type="submit">#}
+{#</form>#}
