--- a/templates/admin/user/new.html.twig
+++ b/templates/admin/user/new.html.twig
@@ -1,11 +1,28 @@
 {% extends 'admin/SubTwig/base.html.twig' %}
 
-{% block title %}New User{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header">
+                <strong>Edit Category</strong>
+                <a href="{{ path('user_index') }}" class="btn btn-secondary btn-sm float-right">
+                    <i class="fa fa-arrow-left"></i> Back To List
+                </a>
+            </div>
+            <div class="card-body">
+                {{ include('admin/user/_form.html.twig', {'button_label': 'Create'}) }}
 
-    {{ include('admin/user/_form.html.twig') }}
+            </div>
+            <div class="card-footer">
+                <a href="{{ path('user_index') }}" class="btn btn-dark btn-sm float-right">
+                    <i class="fa fa-arrow-left"></i> back to list
+                </a>
+            </div>
+        </div>
 
-    <a href="{{ path('user_index') }}">back to list</a>
+    </div>
+
+
 {% endblock %}
