--- a/templates/admin/user/show.html.twig
+++ b/templates/admin/user/show.html.twig
@@ -1,34 +1,59 @@
 {% extends 'admin/SubTwig/base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %}{{title}}{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h1 style="display: inline-block">{{ user.username }} </h1>
+                <a href="{{ path('user_index') }}" class="btn btn-dark btn-sm float-right">
+                    <i class="fa fa-arrow-left"></i> back to list
+                </a>
+            </div>
+            <div class="card-body">
+                <div class="col-md-12">
+                    <div class="table-responsive m-b-40">
+                        <table class="table table-condensed table-bordered table-data3">
+                            <tbody>
+                            <tr>
+                                <th class="bg-dark text-white">Id</th>
+                                <td>{{ user.id }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Email</th>
+                                <td>{{ user.email }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Name</th>
+                                <td>{{ user.username }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Surname</th>
+                                <td>{{ user.surname }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Roles</th>
+                                <td>{{ user.roles|join(', ') }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Joined At</th>
+                                <td>{{ user.createdAt | date('Y-m-d') }}</td>
+                            </tr>
+                            <tr>
+                                <th class="bg-dark text-white">Updated At</th>
+                                <td>{{ user.updatedAt | date('Y-m-d') }}</td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="card-footer">
+                <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-primary float-right">edit</a>
+                {{ include('admin/user/_delete_form.html.twig') }}
+            </div>
+        </div>
+    </div>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user.id }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles|join(', ') }}</td>
-            </tr>
-            <tr>
-                <th>Password</th>
-                <td>{{ user.password }}</td>
-            </tr>
-        </tbody>
-    </table>
-
-    <a href="{{ path('user_index') }}">back to list</a>
-
-    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-
-    {{ include('admin/user/_delete_form.html.twig') }}
 {% endblock %}
